# krnl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
bindings/python/: CMakeLists.txt  module.cpp
krnl/: CMakeLists.txt
krnl/include/: krnl.hpp
krnl/include/core/: buffer.hpp  commandlist.hpp  context.hpp  controller.hpp  device.hpp  future.hpp  instance.hpp  log.h  parameterset.hpp  pipeline.hpp  shader.hpp  stagingpool.hpp
krnl/include/tensor/: tensor.hpp
krnl/shaders/: add.wgsl
krnl/src/: krnl.cpp
krnl/src/core/: buffer.cpp  commandlist.cpp  context.cpp  controller.cpp  device.cpp  instance.cpp  parameterset.cpp  pipeline.cpp  shader.cpp  stagingpool.cpp
krnl/src/tensor/: tensor.cpp
samples/: CMakeLists.txt
sandbox/: CMakeLists.txt  main.cpp
