[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "krnl"
version = "0.1.0"
description = "Python bindings for KRNL GPU library"
authors = [
    { name = "Senesh Hansana" }
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[tool.scikit-build]
# The Python binding CMake folder
cmake.source-dir = "bindings/python"
